# super_video_grep

./: README.md  pyproject.toml
super_video_grep/: __init__.py  asr.py  cli.py  ffmpeg.py  segments.py  subtitles.py
super_video_grep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
